<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/str_name"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/name_edt_txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_bg"
            android:inputType="text"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/str_mobile_number"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/mobile_edt_txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_bg"
            android:inputType="phone"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/str_vehicle_type"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/spinner_bg" >

            <Spinner
                android:id="@+id/vehicle_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:entries="@array/vehical_type_array"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="#7b7a9d"
                android:src="@drawable/drop_down_img" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/str_vehicle_number"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/vehicle_num_edt_txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_bg"
            android:inputType="text"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/str_vehicle_photo"
            android:textColor="@color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp" >

            <EditText
                android:id="@+id/vehicle_photo_edt_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bg"
                android:inputType="text"
                android:padding="5dp" />

            <Button
                android:id="@+id/browse_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#7b7a9d"
                android:drawableLeft="@drawable/browse"
                android:padding="5dp"
                android:text="@string/str_browse"
                android:textColor="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/str_vehicle_img_view"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <ImageView
                android:id="@+id/vehicle_img_view1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/car" />

            <ImageView
                android:id="@+id/vehicle_img_view2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_effect"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Submit"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>